tests/sksl/errors/EnumTypeCoercion.glsl
### Compilation failed:

error: 1: cannot construct 'SkBlendMode'
1 error
